--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+    <!-- Esto el navegador no lo lee -->
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. computadora Minus cupiditate delectus eum distinctio ullam nam velit comandante dignissimos eius, repellendus controladora nisi aut quae blanditiis assumenda totam, computadora soluta architecto tenetur obcaecati bfz@gmail.com facere.
     </p>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
